[package]
name = "project-euler-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "001"
path = "001/main.rs"

[[bin]]
name = "002"
path = "002/main.rs"

[[bin]]
name = "003"
path = "003/main.rs"

[[bin]]
name = "004"
path = "004/main.rs"

[[bin]]
name = "005"
path = "005/main.rs"

[[bin]]
name = "006"
path = "006/main.rs"

[[bin]]
name = "007"
path = "007/main.rs"

[[bin]]
name = "008"
path = "008/main.rs"

[[bin]]
name = "009"
path = "009/main.rs"

[[bin]]
name = "010"
path = "010/main.rs"
